CMBSandbox4/src/objects/Interview__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin__c</fullName>
        <label>Admin &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Analytical_Problem_Solving_Approach__c</fullName>
        <inlineHelpText>Analytical-Problem Solving Approach</inlineHelpText>
        <label>Analytical-Problem Solving Approach &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apex_Trigger__c</fullName>
        <label>Apex Triggers?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AppExchange_Apps__c</fullName>
        <label>AppExchange Apps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applied_Via__c</fullName>
        <label>Applied Via</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Processes__c</fullName>
        <label>Approval Processes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Areas_of_Strength__c</fullName>
        <label>Areas of Strength</label>
        <picklist>
            <picklistValues>
                <fullName>Requirements Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Areas_to_Scope_Further__c</fullName>
        <label>Areas to Scope Further</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Areas_to_hit_the_ground_running__c</fullName>
        <label>Areas to hit the ground running</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attitude_Passion__c</fullName>
        <label>Attitude/Passion &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bus_Process_Automation_Example__c</fullName>
        <label>Bus. Process Automation Example</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Analyst__c</fullName>
        <label>Business Analyst &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Processes__c</fullName>
        <label>Business Processes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTI_Chat_Integrations__c</fullName>
        <label>CTI/Chat Integrations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <label>Call Center</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaigns__c</fullName>
        <label>Campaigns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Management__c</fullName>
        <label>Case Management</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Catch_Phrases__c</fullName>
        <label>Catch Phrases</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications/Dates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Facing_Experience__c</fullName>
        <label>Client Facing Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_vs_No_Code__c</fullName>
        <label>Code vs No Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Skills__c</fullName>
        <label>Communication Skills - Verbal &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comprehension_Skills__c</fullName>
        <inlineHelpText>Comprehension Skills-Understanding the Business Problem</inlineHelpText>
        <label>Comprehension Skills &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concerns__c</fullName>
        <label>Cons</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Conga__c</fullName>
        <label>Conga</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractor_Availability_Notes__c</fullName>
        <label>Contractor Availability Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contractor_Hourly_Rate__c</fullName>
        <label>Contractor Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Critical_Thinking__c</fullName>
        <label>Critical Thinking &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Compensation_Base_Bonus__c</fullName>
        <label>Current Compensation (Base+ Bonus)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Object__c</fullName>
        <label>Custom Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Loader__c</fullName>
        <label>Data Loader</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Management_Cleaning__c</fullName>
        <label>Data Management/Cleaning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <inlineHelpText>Tell us about your experience with Data migrations. Cleaning, imports., vlookups.</inlineHelpText>
        <label>Data Migration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Modeling_Score__c</fullName>
        <label>Data Modeling &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Modeling__c</fullName>
        <label>Data Modeling</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Available__c</fullName>
        <label>Date Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declarative_vs_Programmatic__c</fullName>
        <label>Declarative vs. Programmatic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Difference_btw_leads_and_opportunities__c</fullName>
        <label>Difference btw leads and opportunities?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Documentation_Requirements__c</fullName>
        <label>Documentation (Requirements)?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Docusign__c</fullName>
        <label>Docusign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education_Experience__c</fullName>
        <label>Education Experience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Excel_Skills__c</fullName>
        <label>Excel Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Excell_VLookup__c</fullName>
        <label>Excell VLookup</label>
        <picklist>
            <picklistValues>
                <fullName>1- None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Intermediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Ninja!</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Familiar_with_DML__c</fullName>
        <label>Familiar with DML?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Force_com_Sites__c</fullName>
        <label>Force.com Sites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Forecasting__c</fullName>
        <label>Forecasting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Formula_Fields__c</fullName>
        <label>Formula Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Future_Plans__c</fullName>
        <label>Future Plans</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Governor_Limits__c</fullName>
        <label>Governor Limits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HTML__c</fullName>
        <label>HTML</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_do_you_like_to_be_managed__c</fullName>
        <label>How do you like to be managed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_do_you_like_to_get_instructions__c</fullName>
        <label>How do you like to get instructions?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_do_you_manage_your_email_Inbox__c</fullName>
        <label>How do you manage your email Inbox?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_do_you_manage_your_time__c</fullName>
        <label>How do you manage your time?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_do_you_plan_your_projects__c</fullName>
        <label>How do you plan your projects?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_do_you_prioritize_your_work__c</fullName>
        <label>How do you prioritize your work?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_to_ensure_solutions_meet_requ__c</fullName>
        <label>How to ensure solutions meet requ?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_Position__c</fullName>
        <label>Ideal Position</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integrations__c</fullName>
        <label>Integrations?</label>
        <length>32222</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <label>JavaScript</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud__c</fullName>
        <label>Marketing Cloud</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MasterDetail_vs_Lookup__c</fullName>
        <label>MasterDetail vs Lookup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Development__c</fullName>
        <label>Mobile Development</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_SDK__c</fullName>
        <label>Mobile SDK</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Native_vs_No_Native_Apps__c</fullName>
        <label>Native vs. No Native Apps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Implementations__c</fullName>
        <label>New Implementations?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NonProfit_Starter_Pack__c</fullName>
        <label>NonProfit Starter Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Notes__c</fullName>
        <label>Offer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offshore_Developers__c</fullName>
        <inlineHelpText>Any experience working with offshore developers?</inlineHelpText>
        <label>Offshore Developers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Org_Sizes__c</fullName>
        <label>Org Sizes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PM_Softwares__c</fullName>
        <label>PM Softwares</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portals_Communities__c</fullName>
        <label>Portals/Communities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Office Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Administrator/Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Developer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prefer_Actual_Dev_work_or_Client_Req_Gat__c</fullName>
        <label>Prefer Actual Dev work or Client Req Gat</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Professional_vs_Enterprise__c</fullName>
        <label>Professional vs Enterprise</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Programmatic_Development__c</fullName>
        <label>Programmatic Development &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Management__c</fullName>
        <label>Project Management?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Mgnt__c</fullName>
        <label>Project Mgnt &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Work_History__c</fullName>
        <label>Project/Work History</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pros__c</fullName>
        <label>Pros</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recommendations_Input__c</fullName>
        <label>Recommendations/Input &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remote_Onsite__c</fullName>
        <label>Remote/Onsite</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reports_Dashboards__c</fullName>
        <label>Reports &amp; Dashboards</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SF_Experience__c</fullName>
        <label>SF Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary_Expectations__c</fullName>
        <label>Salary Expectations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Cloud__c</fullName>
        <label>Sales Cloud</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Experience_Since__c</fullName>
        <label>Salesforce Experience Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sandbox_Change_Sets__c</fullName>
        <inlineHelpText>Have you set up a sandbox? What are the different sandboxes?</inlineHelpText>
        <label>Sandbox/Change Sets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_Settings__c</fullName>
        <label>Security Settings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Cloud__c</fullName>
        <label>Service Cloud</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Social_Integration__c</fullName>
        <label>Social Integration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Architect__c</fullName>
        <label>Solution Architect &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Pending Add&apos;l Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Pending Internal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not a Fit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <inlineHelpText>What are your strongest areas in salesforce? in the workplace? ***Ask for examples***</inlineHelpText>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Techi__c</fullName>
        <label>Techi &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Skills__c</fullName>
        <inlineHelpText>General overall technical skills</inlineHelpText>
        <label>Technical Skills &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology_Background__c</fullName>
        <label>Technology Background</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Testing_Examples__c</fullName>
        <label>Testing Examples</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_dedicated_to_Salesforce__c</fullName>
        <label>Time dedicated to Salesforce</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>IF(ISBLANK(TEXT(Admin__c)), 0, VALUE(LEFT(text(Admin__c ) , 1) ) ) +
IF(ISBLANK(TEXT(Business_Analyst__c)), 0, VALUE(LEFT(text(Business_Analyst__c ) , 1) ) ) +
IF(ISBLANK(TEXT(Communication_Skills__c)), 0, VALUE(LEFT(text(Communication_Skills__c ) , 1) ) ) +
IF(ISBLANK(TEXT(Programmatic_Development__c)), 0, VALUE(LEFT(text(Programmatic_Development__c ) , 1) ) ) +
IF(ISBLANK(TEXT(Project_Mgnt__c)), 0, VALUE(LEFT(text(Project_Mgnt__c ) , 1) ) ) +
IF(ISBLANK(TEXT(Solution_Architect__c)), 0, VALUE(LEFT(text(Solution_Architect__c ) , 1) ) ) +
IF(ISBLANK(TEXT(Techi__c)), 0, VALUE(LEFT(text(Techi__c ) , 1) ) ) +
IF(ISBLANK(TEXT(Written_Communication__c)), 0, VALUE(LEFT(text(Written_Communication__c ) , 1) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Counting all piclists</inlineHelpText>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Others__c</fullName>
        <label>Training Others</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visa_Status__c</fullName>
        <label>Visa Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visual_Flow__c</fullName>
        <label>Visual Flow?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visualforce_Pages__c</fullName>
        <label>Visualforce Pages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_did_you_do_before_salesforce_work__c</fullName>
        <label>What did you do before salesforce work?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_like_most_about_salesforce__c</fullName>
        <label>What do you like most about salesforce?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_dont_you_like_about_salesforce__c</fullName>
        <label>What dont&apos; you like about salesforce?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_your_Day_to_Day_look_like__c</fullName>
        <inlineHelpText>What are you role/responsibilities?</inlineHelpText>
        <label>What is your Day to Day look like?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_your_game_plan_for_training__c</fullName>
        <label>What is your game plan for training?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_past_experiences_would_you_apply__c</fullName>
        <label>What past experiences would you apply?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_was_your_last_job__c</fullName>
        <label>What was your last job?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_was_your_most_complex_project__c</fullName>
        <label>What was your most complex project?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_is_an_Apex_Trigger_needed__c</fullName>
        <label>When is an Apex Trigger needed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_to_convert_a_lead__c</fullName>
        <inlineHelpText>Each organization seems to have a different convention on when a Lead is converted to an Opportunity. Please share your thoughts and perceptive on this. At what point do you convert a Lead to Opportunity?</inlineHelpText>
        <label>When to convert a lead?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_are_you_looking__c</fullName>
        <label>Why are you looking?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Worked_with_other_CRMs__c</fullName>
        <label>Worked with other CRMs?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_Rules__c</fullName>
        <label>Workflow Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Written_Communication__c</fullName>
        <label>Communication Skills - Written &gt;&gt;&gt;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Interview</label>
    <nameField>
        <label>Interview  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>